[package]
name = "undefined_redstone_core"
version = "0.1.0"
edition = "2021"

[dependencies]
undefined_redstone_type = { path = "../undefined_redstone_type" }
undefined_redstone_log = { path = "../undefined_redstone_log" }
rak-rs = { path = "../RakNet-master", default-features = false, features = ["async_tokio", "mcpe"] }
tokio = { version = "1.35.1", features = ["full"] }
rust-i18n = "3"
bevy_ecs = "0.14.0"
bevy_app = "0.14.0"
chrono = "0.4"
toml = "0.8.8"
rand = "0.9.0-alpha.1"