[package]
name = "undefined_redstone_network"
version = "0.1.0"
edition = "2021"

[dependencies]
undefined_redstone_protocol = { path = "../undefined_redstone_protocol" }
undefined_redstone_log = { path = "../undefined_redstone_log" }
rak-rs = { path = "../RakNet-master", default-features = false, features = ["async_tokio", "mcpe"] }
binary-util = { path = "../binary_util" }
rust-i18n = "3"
bevy_ecs = "0.14.0"
bevy_app = "0.14.0"
tokio = "1.38.0"
rand = "0.8.5"
anyhow = "1.0.86"
uuid = { version = "1.10.0", features = ["v4"] }