[package]
name = "undefined_redstone_packloader"
version = "0.1.0"
edition = "2021"

[dependencies]
undefined_redstone_type = { path = "../undefined_redstone_type" }
serde_json = "1.0"
uuid = "*"
bevy_ecs = "0.14.0"
serde = { version = "1.0.203", features = ["derive"] }
serde-inline-default = "0.2"
regex = "*"
zip = "2.1.3"
sha2 = "0.11.0-pre.3"
anyhow = "1.0.86"
chrono = "*"