[package]
name = "undefined_redstone_protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
binary-util = { path = "../binary_util" }
undefined_redstone_core = { path = "../undefined_redstone_core" }
undefined_redstone_type = { path = "../undefined_redstone_type" }
undefined_redstone_packloader = { path = "../undefined_redstone_packloader" }
flate2 = { version = "1.0", features = ["zlib-ng"], default-features = false }
bevy_ecs = "0.14.0"
bevy_app = "0.14.0"
rand = "0.9.0-alpha.1"
snap = "1"
uuid = { version = "1.10.0", features = ["v4"] }
sha2 = "0.10.8"
serde_json = "1.0.120"
hmac = "0.12.0"
base64 = "0.22.1"
jwt = "0.16.0"
serde = "1"
jsonwebtoken = "9.3.0"
p384 = "*"
openssl = { version = "0.10", features = ["vendored"] }
anyhow = "1.0.86"