[package]
name = "undefined_redstone_world"
version = "0.1.0"
edition = "2021"

[dependencies]
undefined_redstone_core = { path = "../undefined_redstone_core" }
undefined_redstone_nbt = { path = "../undefined_redstone_nbt" }
undefined_redstone_type = { path = "../undefined_redstone_type" }
undefined_redstone_log = { path = "../undefined_redstone_log" }
bevy_ecs = "0.14"
bevy_app = "0.14"
binary-util = { path = "../binary_util" }
zip = "2.1.3"
anyhow = "1.0.86"
serde = "1.0"
serde-inline-default = "0.2"
serde_json = "1.0.120"
chrono = "0.4"
rust-i18n = "3"